fix overflow

--- a/src/public/styles/index.scss
+++ b/src/public/styles/index.scss
@@ -6,7 +6,6 @@ body {
   font-family: "Supermercado One", cursive;
   background: linear-gradient(120deg, gray, white);
   height: 100vh;
-  overflow: hidden;
 }
 
 .main__form {
